# libciabatta

./: .bazelignore  .bazelrc  .gitignore  BUILD  CMakeLists.txt  CODE_OF_CONDUCT.md  Makefile  README.md  WORKSPACE  ciabatta.hpp  example.cpp
CMake/: ciabatta-config.cmake.in  ciabatta.pc.in
ciabatta/: BUILD  ciabatta.hpp
include/ciabatta/: ciabatta.hpp
test/: BUILD  CMakeLists.txt  example.cpp  test_chained_init.cpp  test_provides.cpp
